--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -18,6 +18,7 @@
     width: 200px;
     height: 100%;
     min-width: 200px;
+    min-height: 115px;
     margin-right: 20px;
     justify-content: center;
 
