--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,14 +2,13 @@
     <div class="container__small-card-content">
         <div class="small-card__image">
             <img 
-                src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*IttvWaoZzAqbcA84NUpufw.png" 
-                alt="FALHOU"
+                src="{{photoCover}}" 
+                alt="FALHOU OU NAO CARREGOU"
                 srcset=""
-                
-                >
+            >
         </div>
         <div class="small-card__title">
-            <h1><a href="">Atualização sobre a suspensão de uso do transferidor, agosto de 2023</a></h1>
+            <h1><a href="{{cardTitleHr}}">{{cardTitle}}</a></h1>
         </div>
     </div>
     <div class="container__small-card__separator">
