--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,11 +8,42 @@
 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card 
+
+        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*Nmb3_8DCuANFEcfXD7iyEQ.png"
+
+        cardTitle="Regeneração Estática Incremental para Angular"
+
+        cardTitleHref="https://blog.angular.io/
+        incremental-static-regeneration-for-angular-c12745ff4b48"
+
+        cardDescription="No Angular v16 ganhamos um novo sistema de hidratação. Também foi sugerido que experimentos para hidratação parcial e retomada estão em andamento. Esta é uma ótima notícia para os desenvolvedores Angular, mas ainda há muito trabalho a ser feito para tornar os aplicativos Angular com melhor desempenho e SEO mais amigáveis"
+
+        cardDescriptionHref="https://blog.angular.io/incremental-static-regeneration-for-angular-c12745ff4b48"
+
+        ></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*IttvWaoZzAqbcA84NUpufw.png"
+
+        cardTitle="Atualização sobre a suspensão de uso do transferidor, agosto de 2023"
+
+        cardTitleHr="https://blog.angular.io/protractor-deprecation-update-august-2023-2beac7402ce0"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*CNy2EclZxC1hmi_govb_7w.png"
+
+        cardTitle="Angular v16 está aqui!"
+
+        cardTitleHr="https://blog.angular.io/angular-v16-is-here-4d7a28ec680d"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*IqSLoydVQwWsVmlchl5B4A.png"
+
+        cardTitle="Resumo dos resultados da pesquisa Angular Developer 2022"
+
+        cardTitleHr="https://blog.angular.io/angular-developer-survey-2022-results-summary-d17c88f62690"
+        ></app-small-card>
     </div>
 </div>
