--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -9,14 +9,13 @@
                 >
         </div>
         <div class="big-card__title">
-            <h1><a href="{{cardTitleHref}}">{{cardTitle}}</a></h1>
+            <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
         </div>
         <div class="big-card__description">
-            <p><a href="{{cardDescriptionHref}}">{{cardDescription}}
+            <p><a [routerLink]="['content', Id]">{{cardDescription}}
             </a></p>
         </div>
     
 </div>
 
 
-<!-- No Angular v16 ganhamos um novo sistema de hidratação. Também foi sugerido que experimentos para hidratação parcial e retomada estão em andamento. Esta é uma ótima notícia para os desenvolvedores Angular, mas ainda há muito trabalho a ser feito para tornar os aplicativos Angular com melhor desempenho e SEO mais amigáveis. -->
