--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,4 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
+
 
 
 <app-menu-title></app-menu-title>
@@ -9,15 +7,12 @@
 <div class="container__articles">
     <div class="articles__main">
         <app-big-card 
+        Id="1"
+        photoCover="https://images2.alphacoders.com/837/837971.png"
 
-        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*Nmb3_8DCuANFEcfXD7iyEQ.png"
+        cardTitle="Gengar:  O Fantasma Sombrio"
 
-        cardTitle="Regeneração Estática Incremental para Angular"
-
-        cardTitleHref="https://blog.angular.io/
-        incremental-static-regeneration-for-angular-c12745ff4b48"
-
-        cardDescription="No Angular v16 ganhamos um novo sistema de hidratação. Também foi sugerido que experimentos para hidratação parcial e retomada estão em andamento. Esta é uma ótima notícia para os desenvolvedores Angular, mas ainda há muito trabalho a ser feito para tornar os aplicativos Angular com melhor desempenho e SEO mais amigáveis"
+        cardDescription="Gengar é um Pokémon do tipo fantasma/veneno introduzido na Geração I. É a forma evoluída de Haunter. É um Pokémon de cor roxa, com orelhas triangulares, olhos pretos com globos oculares vermelhos e um sorriso malicioso..."
 
         cardDescriptionHref="https://blog.angular.io/incremental-static-regeneration-for-angular-c12745ff4b48"
 
@@ -25,25 +20,28 @@
     </div>
     <div class="articles__others">
         <app-small-card
-        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*IttvWaoZzAqbcA84NUpufw.png"
+        Id="2"
+        photoCover="https://i.pinimg.com/originals/19/1e/7c/191e7c5444a1e11ecc2b40a9bf920e93.jpg"
 
-        cardTitle="Atualização sobre a suspensão de uso do transferidor, agosto de 2023"
+        cardTitle="Banette: o espírito da boneca abandonada"
 
-        cardTitleHr="https://blog.angular.io/protractor-deprecation-update-august-2023-2beac7402ce0"
+        
         ></app-small-card>
         <app-small-card
-        photoCover="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*CNy2EclZxC1hmi_govb_7w.png"
+        Id="3"
+        photoCover="https://i.pinimg.com/564x/e8/8a/26/e88a26ed7508bbbd454e84fb1f32cabf.jpg"
 
-        cardTitle="Angular v16 está aqui!"
+        cardTitle="Dusknoir: o Pokémon fantasma da noite"
 
-        cardTitleHr="https://blog.angular.io/angular-v16-is-here-4d7a28ec680d"
+        
         ></app-small-card>
         <app-small-card
-        photoCover="https://miro.medium.com/v2/resize:fit:720/format:webp/1*IqSLoydVQwWsVmlchl5B4A.png"
+        Id="4"
+        photoCover="https://i.pinimg.com/564x/c9/c5/8e/c9c58efc209994d249c97219076e22f2.jpg"
 
-        cardTitle="Resumo dos resultados da pesquisa Angular Developer 2022"
+        cardTitle="Darkrai: o Pokémon da escuridão dos sonhos"
 
-        cardTitleHr="https://blog.angular.io/angular-developer-survey-2022-results-summary-d17c88f62690"
+       
         ></app-small-card>
     </div>
 </div>
