--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,5 @@
 <div class="container_menu-title">
     <hr>
-        <h1>PHANTOM BLOG</h1>    
+        <h1>PHANTOM POKE</h1>    
     <hr>
 </div>
