--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -39,7 +39,7 @@
         Id="4"
         photoCover="https://i.pinimg.com/564x/c9/c5/8e/c9c58efc209994d249c97219076e22f2.jpg"
 
-        cardTitle="Darkrai: o Pokémon da escuridão dos sonhos"
+        cardTitle="Darkrai: o Pokémon da escuridão dos Pesadelos"
 
        
         ></app-small-card>
