--- a/src/app/components/menu-title/menu-title.responsive.component.css
+++ b/src/app/components/menu-title/menu-title.responsive.component.css
@@ -1,36 +1,154 @@
 
-@media screen and (max-width:600px){
 
-    .container_menu-title h1{
+
+
+@media screen and (min-width:375px){
+
+
+    .container_menu-title{
+        color: white;
+        text-shadow: rgba(0, 0, 0, 0.603) 0px 5px 15px;
     
-      
-        font-size: 100px;
-        
     }
 
-}
+ 
 
-
-
-/* .container_menu-title{
-    color: white;
-
-}
-
-.container_menu-title h1{
+   
     
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 150px;
-    display: flex;
-    justify-content: center;
-    font-family: 'segoe ui';
+    .container_menu-title h1{
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+        font-family: 'segoe ui';
+    }
+    
+    
+    .container_menu-title hr {
+    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
 
+@media screen and (min-width:480px){
 
-.container_menu-title hr {
 
-    margin-top: 20px;
-    margin-bottom: 20px;
+    .container_menu-title{
+        color: white;
+        text-shadow: rgba(0, 0, 0, 0.603) 0px 5px 15px;
+    
+    }
+
+ 
+
+   
+    
+    .container_menu-title h1{
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+        font-family: 'segoe ui';
+    }
+    
+    
+    .container_menu-title hr {
+    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
- */
+
+@media screen and (min-width:767px){
+
+
+    .container_menu-title{
+        color: white;
+        text-shadow: rgba(0, 0, 0, 0.603) 0px 5px 15px;
+    
+    }
+
+ 
+
+   
+    
+    .container_menu-title h1{
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 70px;
+        display: flex;
+        justify-content: center;
+        font-family: 'segoe ui';
+    }
+    
+    
+    .container_menu-title hr {
+    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (min-width:1024px){
+
+    .container_menu-title{
+        color: white;
+        text-shadow: rgba(0, 0, 0, 0.603) 0px 5px 15px;
+    
+    }
+    
+    .container_menu-title h1{
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 100px;
+        display: flex;
+        justify-content: center;
+        font-family: 'segoe ui';
+    
+    }
+    
+    
+    .container_menu-title hr {
+    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    
+    
+} 
+
+@media screen and (min-width:1200px){
+
+    .container_menu-title{
+        color: white;
+        text-shadow: rgba(0, 0, 0, 0.603) 0px 5px 15px;
+        
+    }
+    
+    .container_menu-title h1{
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 130px;
+        display: flex;
+        justify-content: center;
+        font-family: 'segoe ui';
+    
+    }
+    
+    
+    .container_menu-title hr {
+    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    
+    
+} 
